--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+
+    <head>
+        
+        <title>Subscribe to Sonu's newsletter</title>
+
+    </head>
+
+<body>
+
+
 <div id="revue-embed">
   <form action="https://www.getrevue.co/profile/sonukushwaha/add_subscriber" method="post" id="revue-form" name="revue-form"  target="_blank">
   <div class="revue-form-group form-group">
@@ -18,3 +30,7 @@
   <div class="revue-form-footer">By subscribing, you agree with Revue’s <a target="_blank" href="https://www.getrevue.co/terms">Terms of Service</a> and <a target="_blank" href="https://www.getrevue.co/privacy">Privacy Policy</a>.</div>
   </form>
 </div>
+
+
+    </body>
+</html>
