--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     </head>
 
 <body>
-
+<div class="card">
+  <div class="card-header">
+    Subscribe to Sonu's newsletter
+  </div>
+  <div class="card-body">
 
 <div id="revue-embed">
   <form action="https://www.getrevue.co/profile/sonukushwaha/add_subscriber" method="post" id="revue-form" name="revue-form"  target="_blank">
@@ -34,6 +38,8 @@
   </form>
 </div>
 
+  </div>
+</div>
 
     </body>
 </html>
