--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     </head>
 
 <body>
-<div class="card">
+<div class="card border-primary mb-3" style="max-width: 18rem;">
+ 
   <div class="card-header">
     Subscribe to Sonu's newsletter
   </div>
