--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     </head>
 
 <body>
+
+<div class="container-fluid">
+  
+
 <div class="card border-primary mb-3" style="max-width: 18rem;">
  
   <div class="card-header">
@@ -42,7 +46,7 @@
 </div>
 
   </div>
+ </div>
 </div>
-
     </body>
 </html>
