--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="container-fluid">
   
 
-<div class="card border-primary mb-3" style="max-width: 18rem;">
+<div class="card border-primary mb-3 w-auto" style="background-color: #eee;">
  
   <div class="card-header">
     Subscribe to Sonu's newsletter
