--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <div class="card border-primary mt-3 w-auto" style="background-color: #eee;">
  
-  <div class="card-header">
+  <div class="card-header text-center">
     Subscribe to Sonu's newsletter
   </div>
   <div class="card-body">
