--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <form action="https://www.getrevue.co/profile/sonukushwaha/add_subscriber" method="post" id="revue-form" name="revue-form"  target="_blank">
   <div class="revue-form-group form-group">
     <label for="member_email">Email address</label>
-    <input class="revue-form-field" placeholder="Your email address..." type="email" name="member[email]" id="member_email">
+    <input class="revue-form-field" placeholder="Your email address..." type="email" name="member[email]" id="member_email" required>
   </div>
   <div class="revue-form-group form-group">
     <label for="member_first_name">First name <span class="optional">(Optional)</span></label>
